--- a/TODO
+++ b/TODO
@@ -1,8 +1,5 @@
-- Find elegant solution to the deref problem.
-  - HttpKit returns derefable responses.
-  - Clj-http does not.
-- Better docstrings and improve documentation in README
 - Release v1.0
 - Spying functionality.
   - uk.axvr.dynamock.spy namespace
   - spy mock and utilities.
+- Add [:transform :request] and [:transform :response] opts to http-mock.
