--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
   - uk.axvr.dynamock.spy namespace
   - spy mock and utilities.
 - Add [:transform :request] and [:transform :response] opts to http-mock.
+- Is :derefable? the best solution?  Just delay all stub responses?
