Update dependencies and switch to pure tools.build

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-- Mention `*direct-linking*` in README and doc-strings.
-- Switch for pure tools.build.
+- Mention `*direct-linking*` and `^:redef` in README and doc-strings.
 - Block HTTP requests except...
 - Optionally report on no matching stubs and show the result.
   - This will be a stub-itself
